--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -257,9 +257,12 @@ each covariate affects.
 
 ```{r microbiome_RDA1}
 # Load libraryd packages
-library("vegan")
-library("stringr")
-library("knitr")
+
+library(vegan)
+library(stringr)
+library(knitr)
+
+
 # Load data
 data(enterotype, package="mia")
 # Covariates that are being analyzed
@@ -333,8 +336,9 @@ kable(rda_info)
 
 ```{r microbiome_RDA2}
 # Load ggord for plotting
-library("ggord")
-library("ggplot2")
+library(ggord)
+library(ggplot2)
+
 
 # Since na.exclude was used, if there were rows missing information, they were 
 # dropped off. Subset coldata so that it matches with rda.
