--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -119,7 +119,7 @@ Next, we create a heatmap depicting all cross-correlations between bacterial
 genera and metabolite concentrations.
 
 ```{r cross-correlation6, fig.width=10, fig.height=8}
-library("ComplexHeatmap") 
+library(ComplexHeatmap) 
 
 # Create a heatmap and store it
 plot <- Heatmap(correlations$cor,
