--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -235,10 +235,11 @@ or online channels.
 
 ### mia family of methods
 
-- [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
-- [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@Ernst2022]
-- [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@Simsek2021]
-- [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@Lahti2021]
+- [mia](https://microbiome.github.io/mia/): Microbiome analysis tools [@R_mia]
+- [miaViz](https://microbiome.github.io/miaViz/): Microbiome analysis specific visualization [@Ernst2022]
+- [miaSim](https://microbiome.github.io/miaSim/): Microbiome data simulations [@Simsek2021]
+- [miaTime](https://microbiome.github.io/miaTime/): Microbiome time series analysis [@Lahti2021]
+
 
 
 ### Tree-based methods {#sub-tree-methods}
@@ -306,13 +307,15 @@ knitr::include_graphics("general/figures/FigureOverviewV2_mod.png")
 
 ## Data containers
 
-`SummarizedExperiment` (`SE`) [@R-SummarizedExperiment] is a generic and highly optimized container for complex data
+`SummarizedExperiment` (`SE`) [@R_SummarizedExperiment] is a generic and highly optimized container for complex data
+
 structures. It has become a common choice for analysing various types
 of biomedical profiling data, such as RNAseq, ChIp-Seq, microarrays,
 flow cytometry, proteomics, and single-cell
 sequencing.
 
-[`TreeSummarizedExperiment`] (`TreeSE`) [@R-TreeSummarizedExperiment] was developed as an extension to incorporate hierarchical
+[`TreeSummarizedExperiment`] (`TreeSE`) [@R_TreeSummarizedExperiment] was developed as an extension to incorporate hierarchical
+
 information (such as phylogenetic trees and sample hierarchies) and
 reference sequences.
 
@@ -473,7 +476,7 @@ dim(altExp(tse[,1:10],"Phylum"))
 ```
 
 For more details of altExp have a look at the [Intro vignette](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html) of the 
-`SingleCellExperiment` package [@R-SingleCellExperiment].
+`SingleCellExperiment` package [@R_SingleCellExperiment].
 
 
 
@@ -1856,7 +1859,7 @@ row of data and a training dataset. For more information visit the
 
 ### DECIPHER
 
-The DECIPHER package [@R-DECIPHER] implements the `IDTAXA` algorithm to assign
+The DECIPHER package [@R_DECIPHER] implements the `IDTAXA` algorithm to assign
 either taxonomic information or function information. For `mia`
 only the first option is of interest for now and more information can be
 found on the [DECIPHER website](http://www2.decipher.codes/Classification.html).
@@ -1918,7 +1921,7 @@ head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE, make_unique = FALSE))
 ```
 
 To apply the loop resolving function `resolveLoop` from the
-`TreeSummarizedExperiment` package [@R-TreeSummarizedExperiment] within
+`TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment] within
 `getTaxonomyLabels`, set `resolve_loops = TRUE`.
 
 The function `getUniqueTaxa` gives a list of unique taxa for the
@@ -1944,7 +1947,8 @@ tse
 ```
 
 The implementation is based on the `toTree` function from the
-`TreeSummarizedExperiment` package [@R-TreeSummarizedExperiment].
+`TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment].
+
 
 ## Data agglomeration {#data-agglomeration}
 
@@ -2118,7 +2122,7 @@ by species abundances.
 
 Alpha diversity can be estimated with wrapper functions that interact
 with other packages implementing the calculation, such as _`vegan`_
-[@R-vegan].
+[@R_vegan].
 
 
 ### Richness {#richness}
@@ -2134,7 +2138,7 @@ tse <- mia::estimateRichness(tse,
 head(colData(tse)$observed)
 ```
 This allows access to the values to be analyzed directly from the `colData`, for example
-by plotting them using `plotColData` from the _`scater`_ package [@R-scater].
+by plotting them using `plotColData` from the _`scater`_ package [@R_scater].
 
 ```{r plot-div-shannon, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type with colour-labeled barcode."}
 library(scater)
@@ -2217,7 +2221,8 @@ plots[[1]] + plots[[2]] +
 ```
  
 Alternatively, the phylogenetic diversity can be calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
-the widely used function in _`picante`_ [@R-picante, @Kembel2010].  
+the widely used function in _`picante`_ [@R_picante, @Kembel2010].  
+
 
 Load `picante` R package and get the `phylo` stored in `rowTree`.
 
@@ -3578,7 +3583,7 @@ data, is to run community detection algorithms after building a
 graph. The following demonstration builds a graph based on the k
 nearest-neighbors and performs the community detection on the fly.
 
-_`bluster`_ [@R-bluster] package offers several clustering methods,
+_`bluster`_ [@R_bluster] package offers several clustering methods,
 among which graph-based are present, enabling the community detection
 task.
 
@@ -3594,7 +3599,8 @@ to consider during graph construction) using the robust centered log
 ratio (rclr) assay data. Then plotting the communities using UMAP
 [@McInnes2018] ordination as a visual exploration aid.  In the
 following demonstration we use the `enterotype` dataset from the
-[@R-mia] package.
+[@R_mia] package.
+
 
 ```{r, message=FALSE, warning=FALSE}
 library(bluster)
@@ -3625,7 +3631,8 @@ plots <- lapply(k, ClustAndPlot)
 (plots[[1]] + plots[[2]]) / (plots[[3]] + plots[[4]])
 ```
 
-Similarly, the _`bluster`_ [@R-bluster] package offers clustering
+Similarly, the _`bluster`_ [@R_bluster] package offers clustering
+
 diagnostics that can be used for judging the clustering quality (see
 [Assorted clustering
 diagnostics](http://bioconductor.org/packages/release/bioc/vignettes/bluster/inst/doc/diagnostics.html)).
@@ -5882,13 +5889,13 @@ We support the [Bioconductor Code of Conduct](https://bioconductor.github.io/bio
 
 ### Resources for TreeSummarizedExperiment
 
- * SingleCellExperiment [@R-SingleCellExperiment]
+ * SingleCellExperiment [@R_SingleCellExperiment]
    + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html)
    + [Project page](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html)
- * SummarizedExperiment [@R-SummarizedExperiment]
+ * SummarizedExperiment [@R_SummarizedExperiment]
    + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/SummarizedExperiment/inst/doc/SummarizedExperiment.html)
    + [Project page](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
- * TreeSummarizedExperiment [@R-TreeSummarizedExperiment]
+ * TreeSummarizedExperiment [@R_TreeSummarizedExperiment]
    + [Online tutorial](https://bioconductor.org/packages/release/bioc/vignettes/TreeSummarizedExperiment/inst/doc/Introduction_to_treeSummarizedExperiment.html)
    + [Project page](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
    + Publication: [@Huang2021]
@@ -5897,7 +5904,7 @@ We support the [Bioconductor Code of Conduct](https://bioconductor.github.io/bio
 ### Other relevant containers
 
 * [DataFrame](https://rdrr.io/bioc/S4Vectors/man/DataFrame-class.html) which behaves similarly to `data.frame`, yet efficient and fast when used with large datasets.
-* [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the Biostrings package [@R-Biostrings].
+* [DNAString](https://rdrr.io/bioc/Biostrings/man/DNAString-class.html) along with `DNAStringSet`,`RNAString` and `RNAStringSet`  efficient storage and handling of long biological sequences are offered within the Biostrings package [@R_Biostrings].
 * GenomicRanges ([@GenomicRanges2013]) offers an efficient representation and manipulation of genomic annotations and alignments, see e.g. `GRanges` and `GRangesList` at [An Introduction to the GenomicRangesPackage](https://bioconductor.org/packages/release/bioc/vignettes/GenomicRanges/inst/doc/GenomicRangesIntroduction.html).
 
 [NGS Analysis Basics](http://girke.bioinformatics.ucr.edu/GEN242/tutorials/rsequences/rsequences/) provides a walk-through of the above-mentioned features with detailed examples.
@@ -6672,7 +6679,7 @@ and Machine Learning Techniques for Human Microbiome Studies
 
 The framework is based on the _TreeSummarizedExperiment_ data
 container created by Ruizhu Huang and others
-[@R-TreeSummarizedExperiment], and on the MultiAssayExperiment by
+[@R_TreeSummarizedExperiment], and on the MultiAssayExperiment by
 Marcel Ramos et al. [@Ramos2017]. The idea of using these containers
 as a basis for microbiome data science was initially advanced by the
 groundwork of Domenick Braccia, Héctor Corrada Bravo and others, and
