--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -4,34 +4,159 @@ Here you can find assignments on different topics.
 
 **Tips for exercises:**
 
-   - Add comments that explain what each line or lines of code do. This helps you and others to understand your code and find bugs. Furthermore, it is easier for you to reuse the code, and it promotes transparency.
-   - Interpret results by comparing them to literature. List main findings, so that results can easily be understood by others without advanced data analytics knowledge.
+   - Add comments that explain what each line or lines of code do. This helps you and others understand your code and find bugs. Furthermore, it is easier for you to reuse the code, and it promotes transparency.
+   - Interpret results by comparing them to literature. List main findings, so that results can easily be understood by others without advanced knowledge on data analytics.
    - Avoid hard-coding. Use variables which get values in the beginning of the pipeline. That way it is easier for you to modify parameters and reuse the code.
 
 ## Workflows
 
 ### Reproducible reporting with Quarto
 
-1. Create a new Quarto file
+The following batch of exercises walks you through typical use cases of Quarto
+in RStudio. Before heading to the exercises, it is recommended to read the
+[Quarto guidelines for RStudio](https://quarto.org/docs/tools/rstudio.html)
 
-* Rstudio has ready-made templates for this
-* [Creating Quarto Documents](https://quarto.org/docs/tools/rstudio.html#creating-documents)
+#### New document
 
-2. Add a code chunk and name it.
-3. Render (or knit) the file into pdf or html format (Hint: [Quarto Rstudio rendering](https://quarto.org/docs/tools/rstudio.html#render-and-preview))
-4. Import e.g., iris dataset, and add a dotplot with a title (Hint: [geom_dotplot](https://ggplot2.tidyverse.org/reference/geom_dotplot.html))
-5. Create another code chunk and plot. 
-6. Adjust figure size and hide the code chunk from output report.
+This exercise gets you started with creating a Quarto document and adding
+text to it with typing conventions borrowed from the
+[markdown syntax](https://quarto.org/docs/authoring/markdown-basics.html).
+Feel free to render the document with the **Render** button after each step to
+see the changes in the final report.
 
-  * [Sizing](https://quarto.org/docs/authoring/diagrams.html#sizing)
-  * [chunk-options](https://quarto.org/docs/computations/r.html#chunk-options)
+1. Open RStudio and create a new Quarto file named `My first Quarto`.
+2. Add the subtitle `My first section` and write some text of your choice
+   underneath. You can choose the level of headings by the number of preceding
+   hashes (`#`).
+3. Add a subsection named `List of items` and list three items underneath, both
+   ordered and unordered. You can initialize items with numbers (`1.`, `2.`,
+   `3.`, ...) or stars (`*`) for the ordered and unordered case, respectively.
+4. Add another subsection named `Link to web` and add a clickable link to the
+   [OMA book](https://microbiome.github.io/OMA/), using the pattern `[text](url)`.
+5. Render the document and check its appearance
 
-7. Add some text.
-8. Add R commands within the text (Hint: [code-chunks](https://quarto.org/docs/visual-editor/technical.html#code-chunks))
-9. Update HTML file from the qmd file (Hint: [Quarto Rstudio rendering](https://quarto.org/docs/tools/rstudio.html#render-and-preview))
+Nice start! You are now able to create a Quarto document, understand its syntax
+and can render it into a reproducible report. If you got stuck, you can look up
+the docs on [creating](https://quarto.org/docs/tools/rstudio.html#creating-documents)
+and [rendering](https://quarto.org/docs/tools/rstudio.html#render-and-preview)
+Quarto documents.
 
+#### Code chunks
 
-For tips on Quarto, see [Quarto tutorial](https://quarto.org/docs/authoring/markdown-basics.html)
+While customizable text is nothing new by itself, the advantage of Quarto (and
+previously Rmakdown) is to combine text with code in R or other programming
+languages, so that both the analytical pipeline and verbal description can be
+put in one place. In this exercise, we learn how to write and run code in Quarto.
+
+1. Open RStudio and create a new Quarto file.
+2. Initialize a code chunk by pressing `alt` + `cmd` + `i` and define the variables
+   `A <- "my name"` and `B <- 0` in it.
+3. Write the text `Below is my first code chunk` just above the code chunk.
+4. Initialize one more code chunk and add 100 to the variable `B` in it. 
+5. Write the text `Below I change variable B` just above the second chunk.
+6. **Extra**: Write the following line of text: `my name is A and I am B years old`,
+   where A and B are variables defined in the code chunks upstream and change if
+   those variables are modified. Be aware that inline code can be added as
+   `r my_inline_command`.
+   
+Good job. You are now able to combine text and code in a Quarto document. If you
+got stuck, you can refer to the Quarto docs on
+[using code chunks](https://quarto.org/docs/visual-editor/technical.html#code-chunks).
+
+#### Knitr options
+
+Code chunks can be greatly customized in terms of visibility and execution,
+output size and location and much more. This is possible with the knitr chunk
+options, which usually appear at the beginning of the target chunk with the
+syntax `#| option-name: value`, also described
+[here](https://quarto.org/docs/computations/r.html#chunk-options).
+In this exercise, we explore part of the knitr potential.
+
+1. Open RStudio and create a new Quarto file.
+2. Initialize three code chunks and label them as `setup`, `fig-box` and
+   `tbl-coldata`, respectively. Remember that the name of a chunk can be
+   specified with the `label` option.
+3. Write the following code in the corresponding chunk and render the document.
+
+```{r setup-example, eval = FALSE}
+# setup
+library(mia)
+data("GlobalPatterns", package = "mia")
+tse <- GlobalPatterns
+
+# this line sets some options for all the chunks (global chunk options)
+knitr::opts_chunk$set(message = FALSE, warning = FALSE)
+```
+
+```{r fig-example, eval = FALSE}
+# fig-box
+boxplot(colSums(assay(tse)) ~ tse$SampleType)
+```
+
+```{r tbl-example, eval = FALSE}
+# tbl-coldata
+knitr::kable(head(colData(tse)))
+```
+
+4. Set `include: false` in the `setup` chunk, `fig-width: 10` in the `fig-box`
+   chunk and `echo: false` in the `tbl-coldata` chunk. Render the document again
+   and find the differences from before.
+5. Add the options `fig-cap` and `tab-cap` to the `fig-box` and `tbl-coldata`
+   chunks, respectively. They require some text input, which makes for the
+   caption of the figures or tables.
+6. **Extra**: Create a cross-reference to `fig-box` and `tbl-coldata` in the
+   text above the respective code chunk. You can do that with the syntax
+   `@chunk-name`.
+7. **Extra**: Define a custom folder for storing figures with `fig-path`. Insert
+   it in `knitr::opts_chunk$set`, so that it applies globally to all the figures
+   generated in the document.
+   
+Congratulations! You are now familiar with the great potential and flexibility
+of knitr chunk options. An exhaustive list of available options can be found
+in the [knitr documentation](https://yihui.org/knitr/options/).
+
+#### YAML instructions
+
+The box at the beginning of every Quarto document contains yaml options that let
+you define the metadata of the document. They will affect the appearance of the
+document when it is rendered. By default, the box includes yaml options for the
+title, format and editor to be used, but much more information on layout, code
+execution and figures can be specified. A comprehensive list of yaml options is
+available [here](https://quarto.org/docs/reference/formats/html.html). In this
+exercise, we will get a tiny taste of such functionality.
+
+1. Open RStudio and create a new Quarto file.
+2. In the yaml box at the beginning of the document, change the title from
+   `Untitled` to `My first Quarto`.
+4. In the same box, add the two lines `author` and `date` followed by your name
+   and today's date, respectively.
+5. Render the document and check its appearance.
+6. **Extra**: Set `toc: true` to produce a table of contents. This line should
+   follow `format` and `html` at the second level of indentation.
+   
+Well done! Now you are able to specify yaml options and understand how they
+affect your Quarto document. If you got stuck, you can check
+[this section](https://quarto.org/docs/tools/rstudio.html#yaml-intelligence) of
+the Quarto documentation.
+
+#### Quarto parameters
+
+An advanced feature of Quarto consists of execution parameters, which are
+externally pre-defined variables that are also accessible in the Quarto document.
+They can be specified in the yaml box as `params`. Here we learn how to use them.
+
+1. Open RStudio and create a new Quarto file.
+2. In the yaml box at the beginning of the document, add a line named `params`
+   followed by an indented line with `gamma: 10`
+3. Initialize a code chunk and type `str(params$gamma)` in it.
+4. Render the document and check what happened.
+5. Define one more parameter `beta: 3` and multiply `gamma` by `beta` in a code
+   chunk below.
+6. Render the document again and check what happened.
+
+Well done! You can now use an advanced feature of Quarto such as parameters.
+If you got stuck, [here](https://quarto.org/docs/computations/parameters.html#knitr)
+you can find more information about parameter definition and usage.
 
 
 ## Data containers: TreeSE
@@ -307,7 +432,7 @@ HintikkaXOData as an example dataset.
 3. What are the names of the features and samples of the different experiments?
    You can see that with `rownames` and `colnames`, respectively
 4. What information is known about the samples? Remember that information about
-   samples is stored in the `rowData` of the MAE
+   samples is stored in the `colData` of the MAE
 5. **Extra**: How do the samples of the individual experiments map to the
    columns of the MAE? You can find the sample mapping in the `sampleMap`
    of the MAE
