Fix inline code

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -57,7 +57,7 @@ put in one place. In this exercise, we learn how to write and run code in Quarto
 6. **Extra**: Write the following line of text: `my name is A and I am B years old`,
    where A and B are variables defined in the code chunks upstream and change if
    those variables are modified. Be aware that inline code can be added as
-   `r my_inline_command`.
+   \`r my_inline_command\`.
    
 Good job. You are now able to combine text and code in a Quarto document. If you
 got stuck, you can refer to the Quarto docs on
