--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -7,9 +7,8 @@ chapterPreamble()
 
 ```{r load-pkg-data1}
 library(mia)
-data("GlobalPatterns", package = "mia")
-data("peerj13075", package = "mia")
-tse <- peerj13075
+data("enterotype", package = "mia")
+tse <- enterotype
 ```
 
 Clustering is an unsupervised machine learning technique. The idea of
@@ -27,6 +26,9 @@ to do when using this package is to load it, and transform the data if
 necessary, depending on your analysis goals.
 
 ```{r load_bluster}
+# Install dependencies (to remove in the next bioc release)
+devtools::install_github("LTLA/bluster") 
+
 # Load dependencies
 library(bluster)
 
@@ -76,14 +78,6 @@ To change the clustering parameters, simply change the parameters in
 [HclustParam documentation](https://rdrr.io/github/LTLA/bluster/man/HclustParam-class.html).
 Check dedicated part to see other examples.
 
-### Taxa clustering
-
-Similarly to samples, it's also possible to cluster taxa. 
-Prior to clustering, the data should be modified with compositionally 
-aware transformations such as CLR. Then, simply follow the same steps as
-with samples, using `cluster` with `MARGIN = features`. At the end, you 
-can also merge the rows using the clusters indices.
-
 ## Hierarchical clustering
 
 Hierarchical clustering aims to find hiearchy between
@@ -108,7 +102,7 @@ library(mia)
 library(vegan)
 
 # Load experimental data
-tse <- peerj13075
+tse <- enterotype
 ```
 
 Hierarchical clustering requires 2 steps. In the fist step, dissimilarities are 
@@ -240,7 +234,7 @@ Let's cluster the data with DMM clustering.
 # Runs model and calculates the most likely number of clusters from 1 to 7.
 # Since this is a large dataset it takes long computational time.
 # For this reason we use only a subset of the data; agglomerated by Phylum as a rank.
-tse <- GlobalPatterns
+tse <- enterotype
 tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree = TRUE)
 ```
 
