Polish TreeSE exercises

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -161,6 +161,10 @@ you can find more information about parameter definition and usage.
 
 ## Data containers: TreeSE
 
+TreeSE containers represent the working unit of the mia package. In the
+following exercises we learn how to construct, explore and work with them.
+A few demo datasets can be imported with mia and can be accessed as explained
+in chapter \ref(example-data).
 
 ### Constructing a data object {#construct-TreeSE}
 
@@ -186,52 +190,78 @@ You can also check the [function reference in the mia package](https://microbiom
 1. Import data from another format (functions: loadFromMetaphlan | loadFromMothur | loadFromQIIME2 | makeTreeSummarizedExperimentFromBiom | makeTreeSummarizedExperimentFromDADA2 ...)
 2. Try out conversions between TreeSE and phyloseq data containers (makeTreeSummarizedExperimentFromPhyloseq; makephyloseqFromTreeSummarizedExperiment)
 
-### Basic summaries
+### Preliminary exploration
 
-1. Load experimental dataset from mia (e.g. `peerj13075` with the `data()` command; see OMA [section 2.4 Demonstration Data](https://microbiome.github.io/OMA/containers.html#example-data); also see [loading experimental data](https://microbiome.github.io/OMA/containers.html#assay-data)).
-2. Check a summary about the TreeSE object loaded (Hint: `summary()`)
-3. What are the dimensions? (How many samples there are, and how many taxa in each taxonomic rank?) (Hint: material in [Section 2](https://microbiome.github.io/OMA/containers.html#data-science-framework) may help)
-4. List sample and features names for the data (rownames, colnames..)
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. Get a summary about the TreeSE with `summary`. What is the mean count across
+   samples? How many features recur only once (singletons)?
+3. Check the dimensions of the TreeSE with `dim` or alternatively with `nrow`
+   and `ncol`. How many samples and features are present?
+4. List sample and features names with `rownames` and `colnames`.
+5. Check what information about samples and features is contained by the
+   `colData` and `rowData` of the TreeSE with `names`.
+5. **Extra**: Calculate the number of unique taxa for each taxonomic rank. You
+   can use `apply` to count unique elements for each column of rowData.
 
-### Taxonomic abundance table (assay)
+### Assay retrieval
 
-1. (Load example data)
-2. Fetch the list of available assays (Hints: [assayNames](https://microbiome.github.io/OMA/containers.html#assay-data))
-3. Fetch the `counts` assay, and show part of it. (Hint: [assay-data](https://microbiome.github.io/OMA/containers.html#assay-data))
-
-
-### Sample side information 
-
-1. (Load example data)
-2. Fetch and show data about samples (Hint: [colData](https://microbiome.github.io/OMA/containers.html#coldata))
-3. Get abundance data for all taxa for a specific sample (sample names: function `colnames(tse)`)
-
-  * [example](https://microbiome.github.io/OMA/taxonomic-information.html#abundances-of-all-taxa-in-specific-sample)
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. List the names of all available assays with `assayNames`.
+3. Fetch the list of assays with `assays`.
+4. Retrieve the first assay of the TreeSE with `assay`, where the second
+   argument can be either the name or the index of the desired assay.
+   
+Well done! You can now locate and retrieve individual assays of a TreeSE. If you
+got stuck, you can refer to chapter \ref(assay-slot) of this book.
 
 
-### Feature side information
+### Sample information 
 
-1. (Load example data)
-2. Fetch and show data on the (taxonomic) features of the analyzed samples (Hint: [rowData](https://microbiome.github.io/OMA/containers.html#rowdata))
-3. Get abundance data for all samples given a specific features (Hint: [example](https://microbiome.github.io/OMA/taxonomic-information.html#abundances-of-specific-taxa-in-all-samples))
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. Check the names of the samples with `colnames`.
+3. List the information on samples available in colData with `names`.
+4. Visualize the colData with `View` and briefly look at the information stored
+   in the different columns.
+3. Get the abundances of all features for a specific sample, such as `ID34`. You
+   can access sample-specific abundances with `getAbundaceSample`, specifying the
+   desired `sample_id` and `assay.type`
 
-Optional:
 
-4. Create taxonomy tree based on the taxonomy mappings display its information:
+### Feature information
 
- * [generate a taxonomic tree on the fly](https://microbiome.github.io/OMA/taxonomic-information.html#generate-a-taxonomic-tree-on-the-fly)
- * [rowtree](https://microbiome.github.io/OMA/containers.html#rowtree)
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. Check the names of the features with `rownames`
+3. List the information on features available in rowData with `names`.
+4. Visualize the rowData with `View` and briefly look at the information stored
+   in the different columns.
+5. Get the abundances for a specific feature, such as `OTU1810`, in all the
+   samples. You can access feature-specific abundances with `getAbundaceFeature`,
+   specifying the desired `feature_id` and `assay.type`.
+6. **Extra**: Create a taxonomy tree based on the taxonomy mappings with
+   `addTaxonomyTree` and display its content with `taxonomyTree` and `ggtree`.
+
+If you got stuck, you can look up chapters \ref(pick-specific) and \ref(fly-tree)
+on how to pick specific abundances and generate row trees, respectively.
 
 
 ### Other elements
 
-Try to extract some of the [other TreeSE elements](https://f1000research.com/articles/9-1246/v2). These are not always included:
+Try to extract some of the other TreeSE elements listed in chapter \ref(containers).
+However, such data are not always included.
 
-* Experiment metadata
-* Sample tree (colTree)
-* Phylogenetic tree (rowTree)
-* Feature sequences information (DNA sequence slot)
-
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. Fetch the metadata of the TreeSE. Is there any iformation available?
+3. Access the phylogenetic tree with `rowTree`. How big is it in terms of tips
+   and nodes. If you like you can visualize it with `ggtree`.
+4. Check if a sample tree is available with `colTree`, which is suitable for
+   hierarchical or nested study designs.
+5. If present, obtain the information on feature DNA sequences from the DNA
+   sequence slot.
 
 
 ## Data manipulation
@@ -306,19 +336,22 @@ Optional:
 Useful functions: [taxonomyRanks](https://microbiome.github.io/mia/reference/taxonomy-methods.html), agglomerateByRank, mergeRows
 
 
-### Alternative experiments (altExp)
+### Alternative experiments
 
-1. Create taxonomic abundance tables for all different levels (splitByRanks)
-2. Check the available alternative experiment (altExp) names before and after splitByRanks
-3. Pick specific "experiment" (taxonomic rank) from specific altExp; and a specific assay
+1. Import the mia package, load GlobalPatterns with `data` and store it into a
+   variable named `tse`.
+2. Check the taxonomic ranks of the features with `taxonomyRanks`. What is the
+   deepest taxonomic rank available?
+3. Agglomerate the TreeSE to each taxonomic rank and store the resulting
+   experiments as altExps. This can be performed automatically with `splitByRanks`.
+4. Check the names of the generated altExps with `altExpNames` and retrieve a
+   complete list with `altExps`
+5. Retrieve the data agglomerated by genus from the corresponding `altExp`.
+   As for assays, you can access the desired altExp by name or index.
+6. **Extra**: Split the data based on other features (splitOn)
 
-Optional:
 
-4. Split the data based on other features (splitOn)
-
-
-
-## Community diversity (alpha diversity)
+## Community diversity
 
 ### Alpha diversity basics
 
@@ -342,7 +375,7 @@ Useful functions: estimateDiversity, colSums, geom_point, geom_boxplot
 
 
 
-## Community composition (beta diversity)
+## Community similarity
 
 ### Beta diversity basics
 
