--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -27,6 +27,8 @@ necessary, depending on your analysis goals.
 
 ```{r load_bluster}
 # Load dependencies (remove github dependency in the next bioc release)
+detach("package:bluster", unload = TRUE)
+devtools::install_github("LTLA:bluster", force = TRUE)
 library(bluster)
 
 # Apply transformation
