Improve data manipulation exercises

--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -167,7 +167,7 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.   
 
 
-## Data transformation
+## Data transformation {#assay-transform}
 
 Data transformations are common in microbiome analysis. Examples
 include the logarithmic transformation, calculation of relative
