--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -308,28 +308,35 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformCo
 
 ### Assay transformation
 
-1. Transform abundance data with relative abundance and add a relative abundance assay (see [data-transformation](https://microbiome.github.io/OMA/taxonomic-information.html#data-transformation))
-2. Transform abundance data with clr transformation and add a new assay
-3. List the available assays by name
-4. Pick one of the assays and show a subset of it
-5. Subset the entire TreeSE data object, and check how this affects individual (transformed) assays
-6. **Extra**: If the data has phylogenetic tree, perform the phILR transformation
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. Transform the counts assay into relative abundances with `transformCounts` and
+   store it into the TreeSE as an assay named `relabund` (see chapter \ref(assay-transform)).
+3. Similarly, perform a clr transformation on the counts assay with a `pseudocount`
+   of 1 and add it to the TreeSE as a new assay.
+4. List the available assays by name with `assays`.
+5. Access the clr assay and select a subset of its first 100 features and 10
+   samples. Remember that assays are subsettable with `assay[row_idx, col_idx]`.
+5. Take the same subset from the TreeSE, and check how this affects the individual
+   transformed assays. TreeSE can also be subsetted with `tse[row_idx, col_idx]`.
+6. **Extra**: If the data has phylogenetic tree, perform the phILR transformation.
 
 
 ## Abundance tables
 
 ### Taxonomic levels
 
-1. List the available taxonomic ranks in the data
-2. Merge the data to Phylum level
-3. Report dimensionality before and after aggomeration
-
-Optional:
-
-4. Perform CLR transformation on the data; does this affect agglomeration?
-5. List full taxonomic information for some given taxa (Hint: [mapTaxonomy](https://microbiome.github.io/mia/reference/taxonomy-methods.html))
-
-Useful functions: [taxonomyRanks](https://microbiome.github.io/mia/reference/taxonomy-methods.html), agglomerateByRank, mergeRows
+1. Import the mia package, load peerj13075 with `data` and store it into a
+   variable named `tse`.
+2. List the available taxonomic ranks in the data with `taxonomyRanks`.
+3. Agglomerate the data to Phylum level with `agglomerateByRank` and the
+   appropriate value for `Rank`.
+4. Report the dimensions of the TreeSE before and after agglomerating. You can
+   use `dim` for that.
+5. **Extra**: Perform CLR transformation on the data. Does this affect agglomeration?
+6. **Extra**: List full taxonomic information for a few selected taxa, such as
+   `OTU1` and `OTU1368`. For that you can use `mapTaxonomy` on a specific subset
+   of the TreeSE.
 
 
 ### Alternative experiments
@@ -504,17 +511,17 @@ Here we learn how to conduct preliminary exploration on a MAE, using
 HintikkaXOData as an example dataset.
 
 1. Import the mia package, load HintikkaXOData with `data` and store it into a
-   variable named `mae`
+   variable named `mae`.
 2. Which experiments make up the MAE? How many samples and features are contained
    by each experiment? You can get a summary for all experiments with `experiments`,
-   and check for each individual experiment with `dim`, `nrow` and `ncol`
+   and check for each individual experiment with `dim`, `nrow` and `ncol`.
 3. What are the names of the features and samples of the different experiments?
-   You can see that with `rownames` and `colnames`, respectively
+   You can see that with `rownames` and `colnames`, respectively.
 4. What information is known about the samples? Remember that information about
-   samples is stored in the `colData` of the MAE
+   samples is stored in the `colData` of the MAE.
 5. **Extra**: How do the samples of the individual experiments map to the
    columns of the MAE? You can find the sample mapping in the `sampleMap`
-   of the MAE
+   of the MAE.
 
 So far so good. You explored a MAE and its experiments, getting a taste of how
 information is organized in its internal structure.
@@ -525,16 +532,16 @@ Here we learn how to manipulate an experiment contained by a MAE and save the
 new modified version of the experiment in a suitable place (the altExp slot).
 
 1. Import the mia package, load HintikkaXOData with `data` and store it into a
-   variable named `mae`
+   variable named `mae`.
 2. Agglomerate the microbiota experiment by Genus and store the output into the
    `altExp` slot of the microbiota experiment, with the custom name
-   `microbiota_genus`
+   `microbiota_genus`.
 3. How many features remain after agglomerating? What are their names?
 4. **Extra**: create one more alternative experiment named
    `prevalent_microbiota_family`, which contains the microbiota experiment
    agglomerated by Family with a prevalence threshold of 10%. You can
    agglomerate and in parallel select by prevalence with
-   `agglomerateByPrevalence`
+   `agglomerateByPrevalence`.
 
 Good job! You agglomerated one of the experiments in the MAE and stored it as
 an alternative experiment.
@@ -545,12 +552,12 @@ We proceed with an exercise on a different type of data manipulation, that is,
 transformation of assays of individual experiments in the MAE.
 
 1. Import the mia package, load HintikkaXOData with `data` and store it into a
-   variable named `mae`
+   variable named `mae`.
 2. What assays are contained by each individual experiment? You can check their
-   names with `assays`
+   names with `assays`.
 3. Apply a log10 transformation to the assay of the metabolite experiment.
    For that you can use `transformCounts` and don't forget to specify the assay
-   to be transformed with the argument `assay.type`
+   to be transformed with the argument `assay.type`.
 4. Apply a CLR transformation to the counts assay of the microbiota experiment.
    To ensure non-null values in the assay, set `pseudocount` equal to 1.
    
@@ -565,16 +572,16 @@ order to retrieve a specific assay, or to store its components as
 multiple separate csv files.
 
 1. Import the mia package, load HintikkaXOData with `data` and store it into a
-   variable named `mae`
+   variable named `mae`.
 2. Extract the individual metabolite experiment from the MAE into a distinct
-   TreeSE object named `metabolites`
+   TreeSE object named `metabolites`.
 3. Which and how many assays are contained by `metabolites`? You can check that
-   with `assays` or `assayNames`
+   with `assays` or `assayNames`.
 4. Write a csv file for the nmr assay with `write.csv`. You can access an
    individual assay of a TreeSE with `assay` by specifying the name of the
-   desired assay
-5. **Extra**: Repeat step 1 - 4 also for the microbiota and biomarkers experiments,
-   so that a completely disassembled version of the MAE is available
+   desired assay.
+5. **Extra**: Repeat step 1 thorugh 4 also for the microbiota and biomarkers
+   experiments, so that a completely disassembled version of the MAE is available.
 6. **Extra**: Besides experiments, MAEs also include a sampleData and a sampleMap,
    which are accessible with `colData(mae)` and `sampleMap(mae)`, respectively.
    Save also each of these two elements into a csv file.
@@ -591,20 +598,20 @@ Make sure you know their names and location! Alternatively, you can download
 with the readily disassembled components of HintikkaXOData.
 
 1. Read in the csv files containing assays with `read.csv` and save each
-   of them into a variable named `<assay name>_assays`
+   of them into a variable named `<assay name>_assays`.
 2. Create one TreeSE from each assays object with the `TreeSummarizedExperiment`
-   function, as explained in the exercise \@ref(construct-TreeSE)
+   function, as explained in the exercise \@ref(construct-TreeSE).
 3. Read in the sampleData and the sampleMap and store them into the
-   variables `sample_data` and `sample_map`, respectively
+   variables `sample_data` and `sample_map`, respectively.
 4. Combine the components with `MultiAssayExperiment`, where the first argument
    is an `ExperimentList` (for now include only the microbiota and metabolites
-   TreeSEs), the second is colData and the third is sampleMap
+   TreeSEs), the second is colData and the third is sampleMap.
 5. Make sure that the MAE experiments are identical to the original TreeSEs. You
    can do that qualitatively by checking their `head` and quantitatively by 
-   looking at their `dim`
+   looking at their `dim`.
 6. **Extra**: Add the biomarkers TreeSE as a new experiment to the MAE.
    Note that new experiments can be added to a MAE through simple concatenation
-   with `c(mae, experiment)`
+   with `c(mae, experiment)`.
 
 Good job! Now you are aware of how MAEs are built and we can proceed to some
 analytical exercises.
@@ -615,23 +622,23 @@ Now we will perform a cross-correlation analysis between two of the
 experiments in the MAE.
 
 1. Import the mia package, load HintikkaXOData with `data` and store it into a
-   variable named `mae`
+   variable named `mae`.
 2. Analyze correlations between the microbiota and the biomarkers experiments
    with `getExperimentCrossAssociation`. Don't forget to specify the experiments
    you want to compare with the arguments `experiment1` and `experiment2`, and
-   which of their assays with `assay.type1` and `assay.type2`
+   which of their assays with `assay.type1` and `assay.type2`.
 3. What does the output look like? By default, correlation is measured in terms
    of Kendall tau coefficients. Repeat point 2, but this time change `method`
    to Spearman coefficients.
 4. Are you able to infer significance from the output? In order to also obtain
    p-values from the cross-correlation analysis, repeat point 2 with the
-   additional argument `test_significance = TRUE`
+   additional argument `test_significance = TRUE`.
 5. Visualize results with a heatmap similarly to the example in section
    \@ref(cross-correlation). Do you see any significant correlations?
    Interpret your results.
 6. **Extra**: Perform cross-correlation analysis between the remaining
    experiments (microbiota vs metabolites and metabolites vs biomarkers) and
-   visualize results with heatmaps
+   visualize results with heatmaps.
    
 Great job! You performed a cross-correlation analysis between two experiments of
 a MAE and visualized the results with a heatmap. You are also able to customise
