--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -62,9 +62,8 @@ library(ggplot2)
 tse_phylum <- transformCounts(tse_phylum, assay.type = "counts",
                               method = "relabundance", pseudocount = 1)
 
-tse_phylum <- transformCounts(tse_phylum,
-                  assay.type = "relabundance",
-		  method = "clr")
+tse_phylum <- transformCounts(tse_phylum, assay.type = "relabundance",
+                              method = "clr", pseudocount = 1)
 
 # Add z-transformation on features (taxa)
 tse_phylum <- transformCounts(tse_phylum, assay.type = "clr", 
