--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -255,7 +255,7 @@ Show Laplace approximation (model evidence) for each model of the k models.
 
 ```{r}
 library(miaViz)
-plotDMNFit(tse_dmn, type = "laplace")
+plotDMNFit(tse_dmm, type = "laplace")
 ```
 
 Get the model that has the best fit.
