--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -217,7 +217,7 @@ tse <- runMDS(tse, FUN = mia::calculateUnifrac, name = "Unifrac",
 plotReducedDim(tse, "Unifrac", colour_by = "Group")
 ```
 
-## Other ordination methods
+## Other ordination methods {#other-ord-methods}
 
 Other dimension reduction methods, such as `PCA`, `t-SNE` and `UMAP` are 
 inherited directly from the `scater` package.
@@ -256,82 +256,27 @@ It aims to maximize the variance in respect of covariates. The results shows how
 each covariate affects.
 
 ```{r microbiome_RDA1}
-# Load libraryd packages
-
+# Load libraries
 library(vegan)
 library(stringr)
 library(knitr)
 
-
 # Load data
 data(enterotype, package="mia")
-# Covariates that are being analyzed
-variable_names <- c("ClinicalStatus", "Gender", "Age")
+tse <- enterotype
 
 # Apply relative transform
-enterotype <- transformCounts(enterotype, method = "relabundance")
-
-# Create a formula
-formula <- as.formula(paste0("assay ~ ", str_c(variable_names, collapse = " + ")) )
+tse <- transformCounts(tse, method = "relabundance")
 
 # # Perform RDA
-rda <- calculateRDA(enterotype, assay.type = "relabundance",
-                    formula = formula, distance = "bray", na.action = na.exclude)
-# Get the rda object
-rda <- attr(rda, "rda")
-# Calculate p-value and variance for whole model
-# Recommendation: use 999 permutations instead of 99
-set.seed(436)
-permanova <- anova.cca(rda, permutations = 99)
-# Create a data.frame for results
-rda_info <- as.data.frame(permanova)["Model", ]
+mae <- runRDA(tse,
+              assay.type = "relabundance",
+              formula = assay ~ ClinicalStatus + Gender + Age,
+              distance = "bray",
+              na.action = na.exclude)
 
-# Calculate p-value and variance for each variable
-# by = "margin" --> the order or variables does not matter
-set.seed(4585)
-permanova <- anova.cca(rda, by = "margin",  permutations = 99)
-# Add results to data.frame
-rda_info <- rbind(rda_info, permanova)
-
-# Add info about total variance
-rda_info[ , "Total variance"] <- rda_info["Model", 2] +
-    rda_info["Residual", 2]
-
-# Add info about explained variance
-rda_info[ , "Explained variance"] <- rda_info[ , 2] / 
-    rda_info[ , "Total variance"]
-
-# Loop through variables, calculate homogeneity
-homogeneity <- list()
-# Get colDtaa
-coldata <- colData(enterotype)
-# Get assay
-assay <- t(assay(enterotype, "relabundance"))
-for( variable_name in rownames(rda_info) ){
-    # If data is continuous or discrete
-    if( variable_name %in% c("Model", "Residual") ||
-        length(unique(coldata[[variable_name]])) /
-        length(coldata[[variable_name]]) > 0.2 ){
-        # Do not calculate homogeneity for continuous data
-        temp <- NA
-    } else{
-        # Calculate homogeneity for discrete data
-        # Calculate homogeneity
-        set.seed(413)
-        temp <- anova(
-            betadisper( 
-                vegdist(assay, method = "bray"),
-                group = coldata[[variable_name]] ),
-            permutations = permutations )["Groups", "Pr(>F)"]
-    }
-    # Add info to the list
-    homogeneity[[variable_name]] <- temp
-}
-# Add homogeneity to information
-rda_info[["Homogeneity p-value (NULL hyp: distinct/homogeneous --> permanova suitable)"]] <-
-    homogeneity
-
-kable(rda_info)
+rda_tse <- mae[["subset"]]
+plotRDA(rda_tse, colour_by = "ClinicalStatus")
 ```
 
 ```{r microbiome_RDA2}
