--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -430,16 +430,79 @@ represent an important analysis in several studies.
 
 ## Community similarity
 
-### Beta diversity basics
+### Reduced dimensions retrieval
 
-1. Visualize community variation with different methods (PCA, MDS, NMDS, etc.) with plotReduceDim and with different dissimilarities and transformations,plot also other than the first two axes.
+1. Import the mia package, load enterotype with `data` and store it into a
+   variable named `tse`.
+2. List all available reduced dimensions with `reducedDims`. At this point, no
+   reducedDims are likely found, because we haven't created any yet.
+3. Perform PCA and store its output in the TreeSE by running
+   `tse <- runPCA(tse, assay.type = "counts")`. Note that it is required to
+   specify the assay on which dimensionality reduction should be conducted.
+4. View the names of all available reduced dimensions with `reducedDimNames`.
+   Has something new appeared?
+5. **Extra**: Access the `PCA` reducedDim object with `reducedDim` and explore
+   its content. How are the different dimensions stored? Try to extract an
+   array with only the values from the second dimension by indexing the object
+   with `[ , 2]`.
+
+### Visualization basics with PCA
+
+1. Import the mia and scater packages, load enterotype with `data` and store it
+   into a variable named `tse`.
+2. Perform a 3-component PCA based on the `counts` assay. You can use `runPCA`
+   and set the optional arguments `ncomponents` and `assay.type` to the
+   appropriate values.
+3. Plot the first two dimensions of PCA with `plotReducedDim`, to which you
+   should give the appropriate reducedDim name as the second argument. Note that
+   by default only the first two dimensions are shown.
+4. Check which information is stored in the ColData of the TreeSE. What would
+   be worth visualizing in our coordination plot?
+5. Make the same plot again, but this time colour the observations by Enterotype.
+   You can do that by setting `colour_by` to the appropriate colname in the
+   colData of the TreeSE.
+6. **Extra**: Plot all three dimensions of PCA with `plotReducedDim` and the
+   optional argument `ncomponents`. Colour observations by Enterotype. Which
+   pair of dimensions best explains the variance between Enterotypes?
+
+
+### Principal Coordinate Analysis (PCoA)
+
+PCoA turns out to be particularly relevant for microbiome analysis, because
+unlike PCA it can generate reduced dimensions from distances other than
+Euclidean. There are several ecological distances to choose from and you can
+find many of them under methods in the vignettes of `vegan::vegdist`.
+
+1. Import the mia and scater packages, load enterotype with `data` and store it
+   into a variable named `tse`.
+2. Transform the counts assay to relative abundances with `transformCounts`.
+3. Perform a Multi-Dimensional Scaling (MDS) based on the relative abundance
+   assay in terms of Bray-Curtis dissimilarity. You can use `runMDS` with the
+   compulsory argument `FUN = vegan::vegdist`.
+4. Plot the first two dimensions of PCA with `plotReducedDim`, to which you
+   should give the appropriate reducedDim name as the second argument. Colour
+   the observations by Enterotype with `colour_by`.
+5. **Extra**: Perform MDS again with `runMDS`, but this time use Jaccard
+   dissimilarity. The distance metric to use can be defined with the optional
+   argument `method`, choosing from the methods in `?vegan::vegdist`. If you
+   don't want to overwrite the reducedDim object made in point 3, set `name` to
+   a name of your choice. Visualize and compare it to the plot from point 4.
+   
+Good job! You are now able to produce and visualize reduced dimensions of a
+TreeSE. `runMDS` is actually one of several algorithms for PCoA and dimensionality
+reduction, which you can find in section \@ref(other-ord-methods).
+
+
+### Beta diversity analysis 1
+
+1. Visualize community variation with different methods (PCA, MDS, NMDS, etc.) with plotReduceDim and with different dissimilarities and transformations, plot also other than the first two axes.
 2. Use PERMANOVA to test differences in beta diversity. You can also try including continuous and/or categorical covariates
 3. If there are statistical differences in PERMANOVA, test PERMDISP2 (betadisper function)
 4. Do clustering
 5. Try RDA to test the variance explained by external variables
 
 
-### Beta diversity extra
+### Beta diversity analysis 2
 
 1. Install the latest development version of mia from GitHub.
 2. Load experimental dataset from mia.
